--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -1,8 +1,8 @@
 [helpers]
 
-[default.files]
+[neovim.files]
 "init.vim" = "~/.config/nvim/init.vim"
 
-[default.variables]
+[neovim.variables]
 tabwidth = 4
 tabspace = true
