--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -1,11 +1,13 @@
 [helpers]
 
-[neovim.files]
-"neovim/init.vim" = "~/.config/nvim/init.vim"
 
-[neovim.variables]
-tabwidth = 4
-tabspace = true
+[nvim.files]
+"nvim/init.vim" = "~/.config/nvim/init.vim"
+
+[nvim.variables]
+tabwidth  = 4
+tabspace  = true
+textwidth = 80
 
 [tmux.files]
 "tmux/tmux.conf" = "~/.config/tmux/tmux.conf"
