--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,7 @@ set -g set-titles on
 set -g bell-action any
 set -g visual-activity on
 set -g monitor-activity on
-set -g history-limit 10000
+set -g history-limit {{history}}
 
 set -s escape-time 0
 
