--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,18 +1,33 @@
-set -g mouse on
-set -g mode-keys vi
-set -g set-titles on
-set -g bell-action any
-set -g visual-activity on
-set -g monitor-activity on
-set -g history-limit {{history}}
+# Settings
+set-option -g mouse on
+set-option -g set-titles on
+set-option -g renumber-windows on
+set-option -g mode-keys vi
+set-option -g history-limit {{history}}
 
-set -s escape-time 0
+# Statusbar
+set-option -g status on
+set-option -g status-position bottom
+set-option -g status-justify centre
+set-option -g status-style fg=colour8,bg=colour0
+set-option -g status-left  ""
+set-option -g status-right ""
+
+# Notifications
+set-option -g bell-action none
+set-option -g visual-bell off
+set-option -g visual-silence off
+set-option -g visual-activity off
+set-option -g monitor-activity off
 
 set-option -g status-keys vi
 set-option -g visual-bell off
 set-option -g set-clipboard off
 set-option -g default-terminal "tmux-256color"
 set-option -sa terminal-overrides ',st-256color:RGB'
+set-option -sg escape-time 0
+
+set-window-option -g mode-style bg=0,fg=default,noreverse
 
 bind-key -n M-n new-window -c "#{pane_current_path}"
 bind-key -n M-. select-window -n
