--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,15 @@ set-option -g renumber-windows on
 set-option -g mode-keys vi
 set-option -g history-limit {{history}}
 
+set-option -g status-keys vi
+set-option -g visual-bell off
+set-option -g set-clipboard off
+set-option -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ',st-256color:RGB'
+set-option -sg escape-time 0
+
+set-window-option -g mode-style bg=0,fg=default,noreverse
+
 # Statusbar
 set-option -g status on
 set-option -g status-position bottom
@@ -20,15 +29,7 @@ set-option -g visual-silence off
 set-option -g visual-activity off
 set-option -g monitor-activity off
 
-set-option -g status-keys vi
-set-option -g visual-bell off
-set-option -g set-clipboard off
-set-option -g default-terminal "tmux-256color"
-set-option -sa terminal-overrides ',st-256color:RGB'
-set-option -sg escape-time 0
-
-set-window-option -g mode-style bg=0,fg=default,noreverse
-
+# Mappings
 bind-key -n M-n new-window -c "#{pane_current_path}"
 bind-key -n M-. select-window -n
 bind-key -n M-, select-window -p
