Add global zshenv which is required for clean home

--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -19,6 +19,7 @@ folding   = "syntax"
 
 [zsh.files]
 # requires "default"
+"zsh/etc/zshenv" = "/etc/zsh/zshenv"
 "zsh/zshrc"      = "$XDG_CONFIG_HOME/zsh/.zshrc"
 "zsh/zpath"      = "$XDG_CONFIG_HOME/zsh/.zpath"
 "zsh/zshenv"     = "$XDG_CONFIG_HOME/zsh/.zshenv"
