--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,12 +40,25 @@ bind-key -n "M-V" split-window -v -c "#{pane_current_path}"
 bind-key -n M-X confirm-before "kill-window"
 
 bind-key -n M-f resize-pane -Z
-bind-key -n M-h select-pane -L
-bind-key -n M-j select-pane -D
-bind-key -n M-k select-pane -U
-bind-key -n M-l select-pane -R
 bind-key -n M-J swap-pane -D
 bind-key -n M-K swap-pane -U
 bind-key -n M-x confirm-before "kill-pane"
+
+# zoom split
+unbind z
+bind z if-shell "$is_vim" "send-keys \z" "resize-pane -Z"
+bind Z resize-pane -Z
+
+# navigate and resize splits
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n M-h if-shell "$is_vim" "send-keys M-h" "resize-pane -L 2"
+bind -n M-l if-shell "$is_vim" "send-keys M-l" "resize-pane -R 2"
+bind -n M-k if-shell "$is_vim" "send-keys M-k" "resize-pane -U 2"
+bind -n M-j if-shell "$is_vim" "send-keys M-j" "resize-pane -D 2"
 
 bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
