Add radeonsi to video card params

--- a/portage/make.conf
+++ b/portage/make.conf
@@ -12,7 +12,7 @@ MAKEOPTS="-j6"
 
 USE="X -qt5 -gtk -kde acl udev dbus elogind pulseaudio bluetooth -systemd"
 
-VIDEO_CARDS="amdgpu"
+VIDEO_CARDS="amdgpu radeonsi"
 
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
