--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -5,19 +5,13 @@ username = "rasmus"
 locale   = "fi-FI"
 history  = 2147483647
 
-[gentoo.files]
-"portage/make.conf"                   = { target = "/etc/portage/make.conf",                   type = "symbolic", owner = "root" }
-"portage/package.accept_keywords"     = { target = "/etc/portage/package.accept_keywords",     type = "symbolic", owner = "root" }
-"portage/package.license"             = { target = "/etc/portage/package.license",             type = "symbolic", owner = "root" }
-"portage/package.use/app-misc.use"    = { target = "/etc/portage/package.use/app-misc.use",    type = "symbolic", owner = "root" }
-"portage/package.use/dev-lang.use"    = { target = "/etc/portage/package.use/dev-lang.use",    type = "symbolic", owner = "root" }
-"portage/package.use/dev-libs.use"    = { target = "/etc/portage/package.use/dev-libs.use",    type = "symbolic", owner = "root" }
-"portage/package.use/media-sound.use" = { target = "/etc/portage/package.use/media-sound.use", type = "symbolic", owner = "root" }
-"portage/package.use/sys-apps.use"    = { target = "/etc/portage/package.use/sys-apps.use",    type = "symbolic", owner = "root" }
-"portage/package.use/sys-auth.use"    = { target = "/etc/portage/package.use/sys-auth.use",    type = "symbolic", owner = "root" }
-"portage/package.use/x11-misc.use"    = { target = "/etc/portage/package.use/x11-misc.use",    type = "symbolic", owner = "root" }
-"portage/package.use/x11-terms.use"   = { target = "/etc/portage/package.use/x11-terms.use",   type = "symbolic", owner = "root" }
-"portage/package.use/x11-wm.use"      = { target = "/etc/portage/package.use/x11-wm.use",      type = "symbolic", owner = "root" }
+[linux.files]
+"xorg.conf.d/10-keyboard.conf" = {target = "/etc/X11/xorg.conf.d/10-keyboard.conf", type = "symbolic", owner = "root" }
+"xorg.conf.d/20-synaptic.conf" = {target = "/etc/X11/xorg.conf.d/20-synaptic.conf", type = "symbolic", owner = "root" }
+"X11/xinitrc" = "$XDG_CONFIG_HOME/X11/xinitrc"
+
+[archlinux.files]
+"X11/etc/xinitrc" = {target = "/etc/X11/xinit/xinitrc", type = "symbolic", owner = "root" }
 
 [dwm.files]
 "portage/savedconfig/x11-wm/dwm" = { target = "/etc/portage/savedconfig/x11-wm/dwm", type = "symbolic", owner = "root" }
